# STT_pipeline

./: .dockerignore  .gitignore  1.wav.txt  3.txt  4.txt  5.txt  Bien_ban_hop_transcript_2026-06-29-12-02-00.docx  Dockerfile  Mo_phong_Bien_ban_hop_chuyen_mon_Vien_AIDTI_thang_6_2026.srt  README.md  TEMPLATE_Bien_ban_hop_chuyen_mon_Vien_AIDTI.docx  TEST_multi_session_output.docx  docker-compose.yml  example_usage.py  meetings.db  output_srt.txt  pyproject.toml  requirements.txt  scratch_timeline.json  scratch_timeline_consolidated.json  subtitle_2026-04-16-03-25-01.srt  subtitle_2026-06-23-12-56-51.srt  subtitle_2026-06-23-13-04-01.srt  subtitle_2026-06-23-13-37-22.srt  subtitle_2026-06-23-13-42-16.srt  test_api.py  test_output.txt  timeline_debug.json  transcript_2026-06-19-08-24-21.txt  transcript_2026-06-21-14-33-39.txt  transcript_2026-06-24-01-38-56.txt
scripts/: debug_diarization.py  download_model.py  download_phowhisper.py
server/: bienban_generator.py  db.py  main.py  stt_ws.py
src/: __init__.py  audio_enhancer.py  audio_utils.py  diarization.py  streaming_engine.py  stt_engine.py  subtitle_formatter.py  vad_processor.py
tests/: test_stt.py
www/: app.js  index.html  style.css
