# pyproject.toml - File cấu hình project Python
# Định nghĩa metadata project, quản lý phụ thuộc, cấu hình hệ thống build

[project]
# Tên project (chỉ chữ thường, số và dấu gạch ngang)
name = "stt-module"
# Phiên bản project, tuân theo quy tắc SemVer
version = "0.1.0"
# Mô tả ngắn gọn về project
description = "Module nhận dạng giọng nói cục bộ (STT) dựa trên faster-whisper, hỗ trợ đa ngôn ngữ Trung/Việt"
# Thông tin tác giả
authors = [
    {name = "Developer", email = "dev@example.com"}
]
# Loại giấy phép project
license = {text = "MIT"}
# Phiên bản Python tối thiểu (faster-whisper yêu cầu Python >= 3.8)
requires-python = ">=3.8"
# Danh sách phụ thuộc cốt lõi kèm ràng buộc phiên bản
dependencies = [
    "faster-whisper>=1.0.0",
    "pydub>=0.25.0",
    "silero-vad>=0.0.5",
    "huggingface-hub>=0.19.0",
    "numpy>=1.24.0",
]

# Phụ thuộc phát triển (chỉ cài khi ở môi trường dev)
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

# Cấu hình hệ thống build (dùng setuptools)
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Cấu hình huggingface_hub cache: chuyển hướng cache mặc định HF về thư mục models/ trong project
# Nhờ đó file mô hình sẽ được tải thẳng vào project thay vì ~/.cache/huggingface/
[tool.huggingface]
# Tắt cache toàn cục HF, ép ghi file đã tải vào local_dir
disable_cache = true
